tests/ui/traits/new-solver/auto-with-drop_tracking_mir.fail.stderr
error[E0277]: `impl Future<Output = ()>` cannot be sent between threads safely
  --> $DIR/auto-with-drop_tracking_mir.rs:25:13
   |
LL |     is_send(foo());
   |     ------- ^^^^^ `impl Future<Output = ()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Send` is not implemented for `impl Future<Output = ()>`
   = note: consider using `std::sync::Arc<impl Future<Output = ()>>`; for more information visit <https://doc.rust-lang.org/book/ch16-03-shared-state.html>
note: required by a bound in `is_send`
  --> $DIR/auto-with-drop_tracking_mir.rs:24:24
   |
LL |     fn is_send(_: impl Send) {}
   |                        ^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
